# singularity-write

./: .gitignore  CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.write.desktop  dev.sinty.write.gschema.xml  dev.sinty.write.json
po/: POTFILES.in  meson.build
resources/: dev.sinty.write.gresource.xml
src/: app.vala  main.vala  markdown.vala  odt.vala  pdf.vala  window.vala
ui/: main.vetro  meson.build
widget/: dev.sinty.write.notes.widget  notes_widget.vala
